chore: Fix spacing on sequential shape prop types

--- a/src/components/PropList.module.scss
+++ b/src/components/PropList.module.scss
@@ -53,7 +53,7 @@
 .details {
   font-size: 1.25rem;
 
-  &:not(:last-child) {
+  &:not(:last-child):not(:empty) {
     margin-bottom: 1rem;
   }
 }
@@ -73,4 +73,15 @@
   font-family: var(--code-font);
   font-size: 0.875rem;
   color: var(--color-neutrals-600);
+}
+
+.shape {
+  &:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+
+  h4 {
+    margin-top: 0;
+    color: var(--color-neutrals-600);
+  }
 }
